--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title>BTpingchuan</title>
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="/Btpingchuan/prd/styles/usage/app.css">
+  <link rel="stylesheet" href="/Btpingchuan/prd/styles/usage/app@1d8125b0c8d976da570e794597c595a3.css">
 </head>
 <body>
-  <script src="/Btpingchuan/prd/scripts/app.js"></script>
+  <script src="/Btpingchuan/prd/scripts/app@6a097cb3f252cd0d7bd12018f52b3eb3.js"></script>
 </body>
 </html>
